--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1{
     font-size: 6rem;
 }
 .green{
-    background-color: green;
+    color: green;
 }
 .red{
-    background-color: red;
+    color: red;
